tests/error/ptr_decl_assign.gw
// [contains] unhandled function pointer assignement
typedef void (Test)();
Test t1 @=> Test t2;
t2();
